updata swagger formate
